[package]
name = "esp-fast-serial"
version = "0.2.3"
edition = "2021"
authors = ["Fan Jiang <i@fanjiang.me>"]
license = "MIT OR Apache-2.0"
resolver = "2"
description = "Fast USB serial library for ESP32-S3 and similar chips with the USB-Serial-JTAG peripheral."
readme = "README.md"
repository = "https://github.com/ProfFan/esp-fast-serial"

[dependencies]
esp-hal = { version = "0.19.*", default-features = false, features = [
    "async",
    "embedded-hal",
] }
esp-hal-embassy = { version = "0.2.*", default-features = false }
esp-backtrace = { version = "0.13.*", default-features = false, features = [
    "panic-handler",
    "exception-handler",
    "defmt",
] }
esp-println = { version = "0.9.*", default-features = false, features = [
    "log",
    # "defmt-espflash",
    "jtag-serial",
    "critical-section",
] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
critical-section = { version = "1.1.*", default-features = false }
defmt = { package = "defmt", version = "0.3.8", features = ["encoding-rzcobs"] }
embassy-futures = "0.1.*"
embassy-sync = "0.6.*"
embassy-executor = { version = "0.6.0" }
bbqueue = { version = "0.5.1" }
static_cell = { version = "2.1.0", features = [
    "nightly",
], default-features = false }
portable-atomic = { version = "1.7.0", default-features = false }

[features]
esp32s3 = [
    "esp-hal/esp32s3",
    "esp-hal-embassy/esp32s3",
    "esp-backtrace/esp32s3",
    "esp-println/esp32s3",
]
esp32c3 = [
    "esp-hal/esp32c3",
    "esp-hal-embassy/esp32c3",
    "esp-backtrace/esp32c3",
    "esp-println/esp32c3",
]
esp32c6 = [
    "esp-hal/esp32c6",
    "esp-hal-embassy/esp32c6",
    "esp-backtrace/esp32c6",
    "esp-println/esp32c6",
]
esp32h2 = [
    "esp-hal/esp32h2",
    "esp-hal-embassy/esp32h2",
    "esp-backtrace/esp32h2",
    "esp-println/esp32h2",
]
esp32s2 = [
    "esp-hal/esp32s2",
    "esp-hal-embassy/esp32s2",
    "esp-backtrace/esp32s2",
    "esp-println/esp32s2",
]
esp32p4 = [] # TODO

[package.metadata.docs.rs]
features = ["esp32c6"]
targets = ["riscv32imac-unknown-none-elf"]
